--- a/Styles/Styles.less
+++ b/Styles/Styles.less
@@ -28,3 +28,11 @@ Page
     font-size: small;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+.GreenText{
+    color:rgb(93, 196, 132);
+}
+
+.RedText{
+    color:rgb(235, 23, 65);
+}
