--- a/Pages/KnowledgePeople/Datos_Maestros/Aspirante/Aspirante_Edit.page
+++ b/Pages/KnowledgePeople/Datos_Maestros/Aspirante/Aspirante_Edit.page
@@ -1,95 +1,99 @@
 {
-	"Caption": "Update Aspirante Detail",
 	"DesignTimeTarget": {
 		"Service": "/DreamsBank/Services/dreamsbankkk.service",
 		"EntitySet": "Aspirante",
 		"QueryOptions": ""
 	},
-	"ActionBar": {
-		"Items": [
-			{
-				"Position": "Left",
-				"SystemItem": "Cancel",
-				"OnPress": "/DreamsBank/Actions/CloseModalPage_Cancel.action"
-			},
-			{
-				"Position": "Right",
-				"SystemItem": "Save",
-				"OnPress": "/DreamsBank/Actions/KnowledgePeople/Datos_Maestros/Aspirante/Aspirante_UpdateEntity.action"
-			}
-		]
-	},
 	"Controls": [
 		{
+			"_Type": "Control.Type.SectionedTable",
+			"_Name": "SectionedTable0",
 			"Sections": [
 				{
-					"_Type": "Section.Type.FormCell",
-					"_Name": "SectionFormCell0",
-					"Visible": true,
 					"Controls": [
 						{
-							"Caption": "cedula",
-							"_Name": "cedula",
 							"Value": "{cedula}",
 							"_Type": "Control.Type.FormCell.SimpleProperty",
-							"IsEditable": false
+							"_Name": "cedula",
+							"IsEditable": false,
+							"Caption": "cedula"
 						},
 						{
-							"Caption": "nombre",
-							"_Name": "nombre",
 							"Value": "{nombre}",
-							"_Type": "Control.Type.FormCell.SimpleProperty"
+							"_Type": "Control.Type.FormCell.SimpleProperty",
+							"_Name": "nombre",
+							"Caption": "nombre"
 						},
 						{
-							"Caption": "edad",
-							"_Name": "edad",
 							"Value": "{edad}",
-							"_Type": "Control.Type.FormCell.SimpleProperty"
+							"_Type": "Control.Type.FormCell.SimpleProperty",
+							"_Name": "edad",
+							"Caption": "edad"
 						},
 						{
-							"Caption": "carrera",
-							"_Name": "carrera",
 							"Value": "{carrera}",
-							"_Type": "Control.Type.FormCell.SimpleProperty"
+							"_Type": "Control.Type.FormCell.SimpleProperty",
+							"_Name": "carrera",
+							"Caption": "carrera"
 						},
 						{
-							"Caption": "semestre",
-							"_Name": "semestre",
 							"Value": "{semestre}",
-							"_Type": "Control.Type.FormCell.SimpleProperty"
+							"_Type": "Control.Type.FormCell.SimpleProperty",
+							"_Name": "semestre",
+							"Caption": "semestre"
 						},
 						{
-							"Caption": "universidad",
-							"_Name": "universidad",
 							"Value": "{universidad}",
-							"_Type": "Control.Type.FormCell.SimpleProperty"
+							"_Type": "Control.Type.FormCell.SimpleProperty",
+							"_Name": "universidad",
+							"Caption": "universidad"
 						},
 						{
-							"Caption": "telefono",
-							"_Name": "telefono",
 							"Value": "{telefono}",
-							"_Type": "Control.Type.FormCell.SimpleProperty"
+							"_Type": "Control.Type.FormCell.SimpleProperty",
+							"_Name": "telefono",
+							"Caption": "telefono"
 						},
 						{
-							"Caption": "correo",
-							"_Name": "correo",
 							"Value": "{correo}",
-							"_Type": "Control.Type.FormCell.SimpleProperty"
-						},
-						{
-							"Caption": "id_aporte",
-							"_Name": "id_aporte",
-							"Value": "{id_producto}",
-							"_Type": "Control.Type.FormCell.SimpleProperty"
+							"_Type": "Control.Type.FormCell.SimpleProperty",
+							"_Name": "correo",
+							"Caption": "correo"
 						}
-					]
+					],
+					"Visible": true,
+					"EmptySection": {
+						"FooterVisible": false
+					},
+					"_Type": "Section.Type.FormCell",
+					"_Name": "SectionFormCell0"
 				}
-			],
-			"_Name": "SectionedTable0",
-			"_Type": "Control.Type.SectionedTable"
+			]
 		}
 	],
 	"_Type": "Page",
 	"_Name": "Aspirante_Edit",
-	"PrefersLargeCaption": true
+	"Caption": "Update Aspirante Detail",
+	"PrefersLargeCaption": true,
+	"ActionBar": {
+		"Items": [
+			{
+				"_Name": "ActionBarItem0",
+				"Caption": "",
+				"SystemItem": "Cancel",
+				"Position": "Left",
+				"IsIconCircular": false,
+				"OnPress": "/DreamsBank/Actions/CloseModalPage_Cancel.action"
+			},
+			{
+				"_Name": "ActionBarItem1",
+				"Caption": "",
+				"SystemItem": "Save",
+				"Position": "Right",
+				"IsIconCircular": false,
+				"OnPress": "/DreamsBank/Actions/KnowledgePeople/Datos_Maestros/Aspirante/Aspirante_UpdateEntity.action"
+			}
+		],
+		"_Name": "ActionBar1"
+	}
 }
