--- a/Pages/KnowledgePeople/Datos_Maestros/Productos/Productos_Detail.page
+++ b/Pages/KnowledgePeople/Datos_Maestros/Productos/Productos_Detail.page
@@ -1,76 +1,82 @@
 {
-	"Caption": "Productos Detail",
 	"DesignTimeTarget": {
 		"Service": "/DreamsBank/Services/dreamsbankkk.service",
 		"EntitySet": "Productos",
 		"QueryOptions": ""
 	},
-	"ActionBar": {
-		"Items": [
-			{
-				"OnPress": "/DreamsBank/Actions/KnowledgePeople/Datos_Maestros/Productos/NavToProductos_Edit.action",
-				"Position": "Right",
-				"SystemItem": "Edit"
-			},
-			{
-				"OnPress": "/DreamsBank/Rules/KnowledgePeople/Datos_Maestros/Productos/Productos_DeleteConfirmation.js",
-				"Position": "Right",
-				"SystemItem": "Trash"
-			}
-		]
-	},
 	"Controls": [
 		{
+			"DataSubscriptions": [],
+			"_Type": "Control.Type.SectionedTable",
+			"_Name": "SectionedTable",
 			"Sections": [
 				{
 					"ObjectHeader": {
-						"Tags": [],
-						"DetailImage": "",
-						"HeadlineText": "{id}",
-						"Subhead": "{nombre}",
-						"BodyText": "",
+						"Subhead": "{descripcion}",
 						"Footnote": "{valor}",
-						"Description": "{descripcion}",
-						"StatusText": "",
-						"StatusImage": "",
-						"SubstatusImage": "",
-						"SubstatusText": ""
+						"Tags": [],
+						"HeadlineText": "{nombre}",
+						"StatusPosition": "Stacked",
+						"StatusImagePosition": "Leading",
+						"SubstatusImagePosition": "Leading"
 					},
-					"_Type": "Section.Type.ObjectHeader"
+					"_Type": "Section.Type.ObjectHeader",
+					"_Name": "SectionObjectHeader0"
 				},
 				{
 					"KeyAndValues": [
 						{
-							"KeyName": "id",
-							"Value": "{id}"
+							"Value": "{nombre}",
+							"_Name": "KeyValue1",
+							"KeyName": "nombre"
 						},
 						{
-							"KeyName": "nombre",
-							"Value": "{nombre}"
+							"Value": "{descripcion}",
+							"_Name": "KeyValue2",
+							"KeyName": "descripcion"
 						},
 						{
-							"KeyName": "descripcion",
-							"Value": "{descripcion}"
-						},
-						{
-							"KeyName": "valor",
-							"Value": "{valor}"
+							"Value": "{valor}",
+							"_Name": "KeyValue3",
+							"KeyName": "valor"
 						}
 					],
+					"MaxItemCount": 1,
+					"_Type": "Section.Type.KeyValue",
+					"_Name": "SectionKeyValue0",
+					"EmptySection": {
+						"FooterVisible": false
+					},
 					"Layout": {
 						"NumberOfColumns": 2
-					},
-					"MaxItemCount": 1,
-					"_Name": "SectionKeyValue0",
-					"_Type": "Section.Type.KeyValue"
+					}
 				}
-			],
-			"DataSubscriptions": [],
-			"_Type": "Control.Type.SectionedTable",
-			"_Name": "SectionedTable"
+			]
 		}
 	],
 	"_Type": "Page",
 	"_Name": "Productos_Detail",
-	"PrefersLargeCaption": true
+	"Caption": "Productos Detail",
+	"PrefersLargeCaption": true,
+	"ActionBar": {
+		"Items": [
+			{
+				"_Name": "ActionBarItem0",
+				"Caption": "",
+				"SystemItem": "Edit",
+				"Position": "Right",
+				"IsIconCircular": false,
+				"OnPress": "/DreamsBank/Actions/KnowledgePeople/Datos_Maestros/Productos/NavToProductos_Edit.action"
+			},
+			{
+				"_Name": "ActionBarItem1",
+				"Caption": "",
+				"SystemItem": "Trash",
+				"Position": "Right",
+				"IsIconCircular": false,
+				"OnPress": "/DreamsBank/Rules/KnowledgePeople/Datos_Maestros/Productos/Productos_DeleteConfirmation.js"
+			}
+		],
+		"_Name": "ActionBar1"
+	}
 }
