--- a/Pages/KnowledgePeople/Menu.page
+++ b/Pages/KnowledgePeople/Menu.page
@@ -5,8 +5,6 @@
 			"_Name": "SectionedTable0",
 			"Sections": [
 				{
-					"_Type": "Section.Type.ObjectHeader",
-					"_Name": "SectionObjectHeader0",
 					"ObjectHeader": {
 						"DetailImage": "/DreamsBank/Images/KP.png",
 						"DetailImageIsCircular": false,
@@ -15,15 +13,11 @@
 						"StatusImagePosition": "Leading",
 						"SubstatusImagePosition": "Leading"
 					},
+					"_Type": "Section.Type.ObjectHeader",
+					"_Name": "SectionObjectHeader0",
 					"Visible": true
 				},
 				{
-					"_Type": "Section.Type.ButtonTable",
-					"_Name": "SectionButtonTable0",
-					"Visible": true,
-					"EmptySection": {
-						"FooterVisible": false
-					},
 					"Separators": {
 						"TopSectionSeparator": false,
 						"BottomSectionSeparator": true,
@@ -31,17 +25,28 @@
 						"FooterSeparator": true,
 						"ControlSeparator": true
 					},
+					"Layout": {
+						"LayoutType": "Vertical",
+						"HorizontalAlignment": "Leading"
+					},
+					"_Type": "Section.Type.ButtonTable",
+					"_Name": "SectionButtonTable0",
+					"Visible": true,
+					"EmptySection": {
+						"FooterVisible": false
+					},
 					"Buttons": [
 						{
 							"_Name": "SectionButton0",
-							"Title": "Registrar nueva entidad",
+							"Title": "Datos Maestros",
 							"Alignment": "Center",
 							"ButtonType": "Text",
 							"Semantic": "Tint",
 							"Image": "res://mdk_logo.png",
 							"ImagePosition": "Leading",
 							"FullWidth": false,
-							"Visible": true
+							"Visible": true,
+							"OnPress": "/DreamsBank/Actions/KnowledgePeople/Datos_Maestros/NavToManu_Maestros.action"
 						},
 						{
 							"_Name": "SectionButton1",
@@ -52,7 +57,8 @@
 							"Image": "res://mdk_logo.png",
 							"ImagePosition": "Leading",
 							"FullWidth": false,
-							"Visible": true
+							"Visible": true,
+							"OnPress": "/DreamsBank/Actions/KnowledgePeople/Proceso/NavTo_Nuevo_Proceso.action"
 						},
 						{
 							"_Name": "SectionButton2",
@@ -65,11 +71,7 @@
 							"FullWidth": false,
 							"Visible": true
 						}
-					],
-					"Layout": {
-						"LayoutType": "Vertical",
-						"HorizontalAlignment": "Leading"
-					}
+					]
 				}
 			]
 		}
